# snf-peirce

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SAK1201-collection-20260408-0126.csv  discogs_v1.lens.json  export_shibuya.sql  load_into_pinot.py  model_builder.py  pinot_substrate.py  pyproject.toml  translator_contract.py
discogs_pg_import/: 00_ddl.sql  load.sh  snf_how.csv  snf_hub.csv  snf_what.csv  snf_when.csv  snf_who.csv  snf_why.csv  verification_report.json
examples/: GUIDED_README.md  guided_api.py  guided_base.py  guided_csv.py  guided_explore.py  guided_pinot.py  guided_sql.py  peirce_quickstart.ipynb
snf_peirce/: CHEATSHEET.py  __init__.py  base_fetcher.py  compile.py  discogs_test1.json  fetch_loc.py  fetch_scryfall.py  guided_ingest.py  lens.py  marc_translator.py  parse_marc.py  parser.py  peirce.py  roaring_substrate.py  rset.py  shell.py  srf.py
tests/: test_compile.py  test_conformance.py  test_lens.py  test_parser.py  test_peirce.py  test_substrate_neutrality.py  test_translator_contract.py
