[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snf-peirce"
version = "0.1.5"
description = "Python implementation of the SNF stack — Peirce parser, lens authoring, substrate compilation, and query execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "duckdb>=0.9",
]

[project.optional-dependencies]
roaring = [
    "pyroaring>=0.4",
]
dev = [
    "pytest>=7.0",
    "jupyter",
]

[project.scripts]
peirce = "snf_peirce.shell:main"

[project.urls]
Homepage = "https://github.com/peirce-lang/snf-peirce"
Repository = "https://github.com/peirce-lang/snf-peirce"

[tool.setuptools.packages.find]
where = ["."]
include = ["snf_peirce*"]

[tool.setuptools.package-data]
snf_peirce = ["*.md"]