[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snf-peirce"
version = "0.2.1"
description = "SNF/Peirce semantic query engine for retrieving data by WHO/WHAT/WHEN/WHERE/WHY/HOW instead of SQL joins"
authors = [
    {name = "Alexander Kern"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "duckdb>=0.9",
]

[project.optional-dependencies]
roaring = [
    "pyroaring>=0.4",
]
dev = [
    "pytest>=7.0",
    "jupyter",
]

[project.scripts]
peirce = "snf_peirce.shell:main"

[project.urls]
Homepage = "https://github.com/peirce-lang/snf-peirce"
Repository = "https://github.com/peirce-lang/snf-peirce"

[tool.setuptools.packages.find]
where = ["."]
include = ["snf_peirce*"]

[tool.setuptools.package-data]
snf_peirce = ["*.md"]

[tool.pytest.ini_options]
pythonpath = [".", "snf_peirce"]